--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "method-override": "2.1.2",
     "errorhandler": "1.1.1",
     "mongodb": "*",
-    "monk": "*"
+    "monk": "*",
+    "async": "0.9.0"
   }
 }
