--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "errorhandler": "1.1.1",
     "mongodb": "*",
     "monk": "*",
-    "async": "0.9.0"
+    "async": "0.9.0",
+    "passport": "0.2.0",
+    "passport-local": "1.0.0",
+    "passport-local-mongoose": "0.3.0"
   }
 }
