--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "async": "0.9.0",
     "passport": "0.2.0",
     "passport-local": "1.0.0",
-    "passport-local-mongoose": "0.3.0"
+    "passport-local-mongoose": "0.3.0",
+    "crypto": "*"
   }
 }
