update json file

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "furniture",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": "0.10.32"
+  },
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "node": "0.10.32",
     "express" : "4.7.2",
     "mongoose" : "3.8.14",
     "jade": "*",
